--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="./image/aclc">
+    <link rel="shortcut icon" type="x-icon" href="./image/logo/aclc">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACLC College Malolos | 404</title>
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/404.css">
 
     <style>
-        body { background-image: url("./image/bg-texture.png"); }
+        body { background-image: url("./image/logo/bg-texture.png"); }
     </style>
 </head>
 <body>
@@ -29,7 +29,7 @@
             <p>Error 404 - Page Not Found</p>
         </div>
         <div class="image__container">
-            <img src="./image/404.svg" alt="">
+            <img src="./image/svg/404.svg" alt="">
         </div>
         <a href="index.html">
             <button>Back To Home</button>
