--- a/alumni.html
+++ b/alumni.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="./image/aclc">
+    <link rel="shortcut icon" type="x-icon" href="./image/logo/aclc">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACLC College Malolos | Alumni</title>
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="./css/alumni.css">
 
     <style>
-        body { background-image: url("./image/bg-texture.png"); }
+        body { background-image: url("./image/logo/bg-texture.png"); }
     </style>
 </head>
 <body>
     <nav>
         <div class="container nav__container">
-            <a href="index.html"><img src="./image/aclc.png" style="width: 200px; height: 65px;"></a>
+            <a href="index.html"><img src="./image/logo/aclc.png" style="width: 200px; height: 65px;"></a>
             <ul class="nav__menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -44,10 +44,10 @@
             <div class="header__left1">
                 <div class="header__image-bg"></div>
                 <div class="header__image-lg">
-                    <img src="./image/alumni1.jpg" alt="Header Image">
+                    <img src="./image/alumni/alumni1.jpg" alt="Header Image">
                 </div>
                 <div class="header__image-sm">
-                    <img src="./image/alumni1.jpg" alt="Header Image">
+                    <img src="./image/alumni/alumni1.1.jpg" alt="Header Image">
                 </div>
             </div>
             <div class="header__right1">
@@ -65,10 +65,10 @@
     </header>
     <div class="header__frames">
         <div class="header__frame">
-            <img src="./image/frame1.jpg" alt="Header Frame One">
+            <img src="./image/alumni/frame1.jpg" alt="Header Frame One">
         </div>
         <div class="header__frame">
-            <img src="./image/frame2.jpg" alt="Header Frame Two">
+            <img src="./image/alumni/frame2.jpg" alt="Header Frame Two">
         </div>
     </div>
     <a href="mailto:shift101.solutions@gmail.com" class="contact__btn header__btn">
@@ -87,10 +87,10 @@
                 <div class="about__image">
                     <div class="about__image-bg"></div>
                     <div class="about__image-lg">
-                        <img src="./image/alumni2.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni2.jpg" alt="About Diana Ayi">
                     </div>
                     <div class="about__image-sm">
-                        <img src="./image/alumni2.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni2.2.jpg" alt="About Diana Ayi">
                     </div>
                 </div>
             </div>
@@ -110,10 +110,10 @@
                 <div class="about__image">
                     <div class="about__image-bg"></div>
                     <div class="about__image-lg">
-                        <img src="./image/alumni3.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni3.jpg" alt="About Diana Ayi">
                     </div>
                     <div class="about__image-sm">
-                        <img src="./image/alumni3.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni3.3.jpg" alt="About Diana Ayi">
                     </div>
                 </div>
             </div>
@@ -133,10 +133,10 @@
                 <div class="about__image">
                     <div class="about__image-bg"></div>
                     <div class="about__image-lg">
-                        <img src="./image/alumni4.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni4.jpg" alt="About Diana Ayi">
                     </div>
                     <div class="about__image-sm">
-                        <img src="./image/alumni4.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni4.4.jpg" alt="About Diana Ayi">
                     </div>
                 </div>
             </div>
@@ -157,10 +157,10 @@
                 <div class="about__image">
                     <div class="about__image-bg"></div>
                     <div class="about__image-lg">
-                        <img src="./image/alumni5.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni5.jpg" alt="About Diana Ayi">
                     </div>
                     <div class="about__image-sm">
-                        <img src="./image/alumni5.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni5.5.jpg" alt="About Diana Ayi">
                     </div>
                 </div>
             </div>
@@ -181,10 +181,10 @@
                 <div class="about__image">
                     <div class="about__image-bg"></div>
                     <div class="about__image-lg">
-                        <img src="./image/alumni6.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni6.jpg" alt="About Diana Ayi">
                     </div>
                     <div class="about__image-sm">
-                        <img src="./image/alumni6.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni6.6.jpg" alt="About Diana Ayi">
                     </div>
                 </div>
             </div>
@@ -205,10 +205,10 @@
                 <div class="about__image">
                     <div class="about__image-bg"></div>
                     <div class="about__image-lg">
-                        <img src="./image/alumni7.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni7.jpg" alt="About Diana Ayi">
                     </div>
                     <div class="about__image-sm">
-                        <img src="./image/alumni7.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni7.7.jpg" alt="About Diana Ayi">
                     </div>
                 </div>
             </div>
@@ -227,7 +227,7 @@
     <footer>
         <div class="container footer__container">
             <div class="footer__1">
-                <a href="index.html" class="footer__logo"><img src="./image/ama.png" style="width: 190px; height: 90px;"><p>AMA EDUCATION SYSTEM</p></a>
+                <a href="index.html" class="footer__logo"><img src="./image/logo/ama.png" style="width: 190px; height: 90px;"><p>AMA EDUCATION SYSTEM</p></a>
                 <p>A member of AMA Education System! ACLC Malolos now offers full online education, earn your degree online -anywhere you are in the world.</p>
             </div>
 
