--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="./image/aclc">
+    <link rel="shortcut icon" type="x-icon" href="./image/logo/aclc">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACLC College Malolos | Home</title>
@@ -21,13 +21,13 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <style>
-        body { background-image: url("./image/bg-texture.png"); }
+        body { background-image: url("./image/logo/bg-texture.png"); }
     </style>
 </head>
 <body>
     <nav>
         <div class="container nav__container">
-            <a href="index.html"><img src="./image/aclc.png" style="width: 200px; height: 65px;"></a>
+            <a href="index.html"><img src="./image/logo/aclc.png" style="width: 200px; height: 65px;"></a>
             <ul class="nav__menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -52,7 +52,7 @@
 
             <div class="header__right">
                 <div class="header__right-image">
-                    <img src="./image/header.svg">
+                    <img src="./image/svg/header.svg">
                 </div>
             </div>
         </div>
@@ -114,7 +114,7 @@
             <article class="course">
                 <div class="course__image">
                     <video width="350" height="350" autoplay muted loop>
-                        <source src="./image/BSCS.mp4" type="video/mp4"/>
+                        <source src="./image/course/BSCS.mp4" type="video/mp4"/>
                     </video>
                 </div>
                 <div class="course__info">
@@ -127,7 +127,7 @@
             <article class="course">
                 <div class="course__image">
                     <video width="350" height="350" autoplay muted loop>
-                        <source src="./image/BSAIS.mp4" type="video/mp4"/>
+                        <source src="./image/course/BSAIS.mp4" type="video/mp4"/>
                     </video>
                 </div>
                 <div class="course__info">
@@ -140,7 +140,7 @@
             <article class="course">
                 <div class="course__image">
                     <video width="350" height="350" autoplay muted loop>
-                        <source src="./image/BSEN.mp4" type="video/mp4"/>
+                        <source src="./image/course/BSEN.mp4" type="video/mp4"/>
                     </video>
                 </div>
                 <div class="course__info">
@@ -279,55 +279,55 @@
             <p>This section is dedicated to events and announcements at ACLC College Malolos.<br>For more information, please visit our Facebook page.</p>
             <div class="swiper-wrapper">
                 <article class="swiper-slide">
-                   <img src="./image/event1.jpg">
+                   <img src="./image/event/event1.jpg">
                 </article>
 
                 <article class="swiper-slide">
-                    <img src="./image/event2.jpg">
+                    <img src="./image/event/event2.jpg">
                 </article>
 
                 <article class="swiper-slide">
-                    <img src="./image/event3.jpg">
+                    <img src="./image/event/event3.jpg">
                 </article>
 
                 <article class="swiper-slide">
-                    <img src="./image/event4.jpg">
+                    <img src="./image/event/event4.jpg">
                 </article>
 
                 <article class="swiper-slide">
-                    <img src="./image/event5.jpg">
+                    <img src="./image/event/event5.jpg">
                 </article>
 
                 <article class="swiper-slide">
-                    <img src="./image/event6.jpg">
+                    <img src="./image/event/event6.jpg">
                 </article>
 
                 <article class="swiper-slide">
-                    <img src="./image/event7.jpg">
+                    <img src="./image/event/event7.jpg">
                 </article>
 
                 <article class="swiper-slide">
-                    <img src="./image/event8.jpg">
+                    <img src="./image/event/event8.jpg">
                 </article>
 
                 <article class="swiper-slide">
-                    <img src="./image/event9.jpg">
+                    <img src="./image/event/event9.jpg">
                 </article>
 
                 <article class="swiper-slide">
-                    <img src="./image/event10.jpg">
+                    <img src="./image/event/event10.jpg">
                 </article>
 
                 <article class="swiper-slide">
-                    <img src="./image/event11.jpg">
+                    <img src="./image/event/event11.jpg">
                 </article>
 
                 <article class="swiper-slide">
-                    <img src="./image/event12.jpg">
+                    <img src="./image/event/event12.jpg">
                 </article>
 
                 <article class="swiper-slide">
-                    <img src="./image/event13.jpg">
+                    <img src="./image/event/event13.jpg">
                 </article>
             </div>
             <div class="swiper-pagination"></div>
@@ -338,7 +338,7 @@
     <footer>
         <div class="container footer__container">
             <div class="footer__1">
-                <a href="index.html" class="footer__logo"><img src="./image/ama.png" style="width: 190px; height: 90px;"><p>AMA EDUCATION SYSTEM</p></a>
+                <a href="index.html" class="footer__logo"><img src="./image/logo/ama.png" style="width: 190px; height: 90px;"><p>AMA EDUCATION SYSTEM</p></a>
                 <p>A member of AMA Education System! ACLC Malolos now offers full online education, earn your degree online -anywhere you are in the world.</p>
             </div>
 
