--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="./image/aclc">
+    <link rel="shortcut icon" type="x-icon" href="./image/logo/aclc">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACLC College Malolos | About</title>
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="./css/about.css">
     
     <style>
-        body { background-image: url("./image/bg-texture.png"); }
+        body { background-image: url("./image/logo/bg-texture.png"); }
     </style>
 </head>
 <body>
     <nav>
         <div class="container nav__container">
-            <a href="index.html"><img src="./image/aclc.png" style="width: 200px; height: 65px;"></a>
+            <a href="index.html"><img src="./image/logo/aclc.png" style="width: 200px; height: 65px;"></a>
             <ul class="nav__menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -42,7 +42,7 @@
     <section class="about__students">
         <div class="container about__students-container">
             <div class="about__students-left">
-                <img src="./image/students.svg" alt="">
+                <img src="./image/svg/students.svg" alt="">
             </div>
 
             <div class="about__students-right">
@@ -84,7 +84,7 @@
         <div class="container teacher__container">
             <article class="teacher__member">
                 <div class="teacher__member-image">
-                    <img src="./image/t1.jpg" alt="">
+                    <img src="./image/instructor/t1.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
                     <h4>Aundrei Galang Magaling</h4>
@@ -99,7 +99,7 @@
 
             <article class="teacher__member">
                 <div class="teacher__member-image">
-                    <img src="./image/t2.jpg" alt="">
+                    <img src="./image/instructor/t2.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
                     <h4>Jeff Arnaldo</h4>
@@ -114,7 +114,7 @@
 
             <article class="teacher__member">
                 <div class="teacher__member-image">
-                    <img src="./image/t3.jpg" alt="">
+                    <img src="./image/instructor/t3.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
                     <h4>Jan Erik Rañopa</h4>
@@ -129,7 +129,7 @@
 
             <article class="teacher__member">
                 <div class="teacher__member-image">
-                    <img src="./image/t4.jpg" alt="">
+                    <img src="./image/instructor/t4.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
                     <h4>John Carlo C. Santiago</h4>
@@ -144,7 +144,7 @@
 
             <article class="teacher__member">
                 <div class="teacher__member-image">
-                    <img src="./image/t5.jpg" alt="">
+                    <img src="./image/instructor/t5.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
                     <h4>Jasmine Paras</h4>
@@ -159,7 +159,7 @@
 
             <article class="teacher__member">
                 <div class="teacher__member-image">
-                    <img src="./image/t6.jpg" alt="">
+                    <img src="./image/instructor/t6.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
                     <h4>Reynaldo V. Bantigue Jr.</h4>
@@ -174,7 +174,7 @@
 
             <article class="teacher__member">
                 <div class="teacher__member-image">
-                    <img src="./image/t7.jpg" alt="">
+                    <img src="./image/instructor/t7.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
                     <h4>John Michael Candelaria</h4>
@@ -189,7 +189,7 @@
 
             <article class="teacher__member">
                 <div class="teacher__member-image">
-                    <img src="./image/t8.jpg" alt="">
+                    <img src="./image/instructor/t8.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
                     <h4>Gloria C. Palisoc</h4>
@@ -204,7 +204,7 @@
 
             <article class="teacher__member">
                 <div class="teacher__member-image">
-                    <img src="./image/t9.jpg" alt="">
+                    <img src="./image/instructor/t9.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
                     <h4>Teacher-9</h4>
@@ -219,7 +219,7 @@
 
             <article class="teacher__member">
                 <div class="teacher__member-image">
-                    <img src="./image/t10.jpg" alt="">
+                    <img src="./image/instructor/t10.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
                     <h4>Teacher-10</h4>
@@ -242,13 +242,13 @@
                 <p>Here are some of our facilities and rooms available for showcasing.<br>For more information, please visit our Facebook page.</p>
             </div>
             <div class="exhibitions__gallery">
-                <article><img src="./image/ev.jpg"></article>
-                <article><img src="./image/e1.jpg"></article>
-                <article><img src="./image/e2.jpg"></article>
-                <article><img src="./image/eh.jpg"></article>
-                <article><img src="./image/e3.jpg"></article>
-                <article><img src="./image/e4.jpg"></article>
-                <article><img src="./image/e5.jpg"></article>
+                <article><img src="./image/facility/ev.jpg"></article>
+                <article><img src="./image/facility/e1.jpg"></article>
+                <article><img src="./image/facility/e2.jpg"></article>
+                <article><img src="./image/facility/eh.jpg"></article>
+                <article><img src="./image/facility/e3.jpg"></article>
+                <article><img src="./image/facility/e4.jpg"></article>
+                <article><img src="./image/facility/e5.jpg"></article>
             </div>
         </div>
     </section>
@@ -257,7 +257,7 @@
     <footer>
         <div class="container footer__container">
             <div class="footer__1">
-                <a href="index.html" class="footer__logo"><img src="./image/ama.png" style="width: 190px; height: 90px;"><p>AMA EDUCATION SYSTEM</p></a>
+                <a href="index.html" class="footer__logo"><img src="./image/logo/ama.png" style="width: 190px; height: 90px;"><p>AMA EDUCATION SYSTEM</p></a>
                 <p>A member of AMA Education System! ACLC Malolos now offers full online education, earn your degree online -anywhere you are in the world.</p>
             </div>
 
