--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="./image/aclc">
+    <link rel="shortcut icon" type="x-icon" href="./image/logo/aclc">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACLC College Malolos | Contact</title>
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="./css/contact.css">
 
     <style>
-        body { background-image: url("./image/bg-texture.png"); }
+        body { background-image: url("./image/logo/bg-texture.png"); }
     </style>
 </head>
 <body>
     <nav>
         <div class="container nav__container">
-            <a href="index.html"><img src="./image/aclc.png" style="width: 200px; height: 65px;"></a>
+            <a href="index.html"><img src="./image/logo/aclc.png" style="width: 200px; height: 65px;"></a>
             <ul class="nav__menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -43,7 +43,7 @@
         <div class="container contact__container">
         <aside class="contact__aside">
             <div class="aside__image">
-                <img src="./image/contact.svg" alt="">
+                <img src="./image/svg/contact.svg" alt="">
             </div>
             <h2>CONTACT US</h2>
             <p>ACLC Malolos Office Hours:  8:00 AM - 5:00 PM<br>We appreciate your interest in ACLC Malolos and look forward to assisting you.</p>
@@ -85,7 +85,7 @@
     <footer>
         <div class="container footer__container">
             <div class="footer__1">
-                <a href="index.html" class="footer__logo"><img src="./image/ama.png" style="width: 190px; height: 90px;"><p>AMA EDUCATION SYSTEM</p></a>
+                <a href="index.html" class="footer__logo"><img src="./image/logo/ama.png" style="width: 190px; height: 90px;"><p>AMA EDUCATION SYSTEM</p></a>
                 <p>A member of AMA Education System! ACLC Malolos now offers full online education, earn your degree online -anywhere you are in the world.</p>
             </div>
 
