--- a/courses.html
+++ b/courses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="./image/aclc">
+    <link rel="shortcut icon" type="x-icon" href="./image/logo/aclc">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACLC College Malolos | Courses</title>
@@ -18,14 +18,14 @@
     <link rel="stylesheet" href="./css/style.css">
     
     <style>
-        body { background-image: url("./image/bg-texture.png"); }
+        body { background-image: url("./image/logo/bg-texture.png"); }
         .courses { margin-top: 1rem; }
     </style>
 </head>
 <body>
     <nav>
         <div class="container nav__container">
-            <a href="index.html"><img src="./image/aclc.png" style="width: 200px; height: 65px;"></a>
+            <a href="index.html"><img src="./image/logo/aclc.png" style="width: 200px; height: 65px;"></a>
             <ul class="nav__menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -43,7 +43,7 @@
         <div class="container courses__container">
             <article class="course">
                 <div class="course__image">
-                    <img src="./image/course1.jpg" alt="">
+                    <img src="./image/course/course1.jpg" alt="">
                 </div>
                 <div class="course__info">
                 <h4>BACHELOR OF SCIENCE IN COMPUTER SCIENCE</h4>
@@ -54,7 +54,7 @@
 
             <article class="course">
                 <div class="course__image">
-                    <img src="./image/course2.jpg" alt="">
+                    <img src="./image/course/course2.jpg" alt="">
                 </div>
                 <div class="course__info">
                     <h4>BACHELOR OF SCIENCE IN ACCOUNTING INFORMATION SYSTEMS</h4>
@@ -65,7 +65,7 @@
 
             <article class="course">
                 <div class="course__image">
-                    <img src="./image/course3.jpg" alt="">
+                    <img src="./image/course/course3.jpg" alt="">
                 </div>
                 <div class="course__info">
                 <h4>BACHELOR OF SCIENCE IN ENTREPRENEURSHIP</h4>
@@ -76,7 +76,7 @@
 
             <article class="course">
                 <div class="course__image">
-                    <img src="./image/course4.jpg" alt="">
+                    <img src="./image/course/course4.jpg" alt="">
                 </div>
                 <div class="course__info">
                 <h4>TECHNICAL-VOCATIONAL-LIVELIHOOD INFORMATION AND COMMUNICATIONS TECHNOLOGY</h4>
@@ -87,7 +87,7 @@
 
             <article class="course">
                 <div class="course__image">
-                    <img src="./image/course5.jpg" alt="">
+                    <img src="./image/course/course5.jpg" alt="">
                 </div>
                 <div class="course__info">
                 <h4>ACCOUNTANCY, BUSINESS, AND MANAGEMENT</h4>
@@ -98,7 +98,7 @@
 
             <article class="course">
                 <div class="course__image">
-                    <img src="./image/course6.jpg" alt="">
+                    <img src="./image/course/course6.jpg" alt="">
                 </div>
                 <div class="course__info">
                 <h4>GENERAL ACADEMIC STRAND</h4>
@@ -109,7 +109,7 @@
 
             <article class="course">
                 <div class="course__image">
-                    <img src="./image/course7.jpg" alt="">
+                    <img src="./image/course/course7.jpg" alt="">
                 </div>
                 <div class="course__info">
                 <h4>ASSOCIATE IN COMPUTER TECHNOLOGY</h4>
@@ -124,7 +124,7 @@
     <footer>
         <div class="container footer__container">
             <div class="footer__1">
-                <a href="index.html" class="footer__logo"><img src="./image/ama.png" style="width: 190px; height: 90px;"><p>AMA EDUCATION SYSTEM</p></a>
+                <a href="index.html" class="footer__logo"><img src="./image/logo/ama.png" style="width: 190px; height: 90px;"><p>AMA EDUCATION SYSTEM</p></a>
                 <p>A member of AMA Education System! ACLC Malolos now offers full online education, earn your degree online -anywhere you are in the world.</p>
             </div>
 
